# status-menu-applet-profiles

./: Makefile  Makefile.am  configure.ac  profiles_status_menu_item.c  status-area-applet-profiles.desktop  status-menu-applet-profiles.c
debian/: changelog  control  copyright  rules
src/: status-menu-applet-profiles.h
